--- a/frontend/src/components/UI/buttons/major_button/MajorButton.module.css
+++ b/frontend/src/components/UI/buttons/major_button/MajorButton.module.css
@@ -7,4 +7,8 @@
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
