--- a/frontend/src/components/UI/modals/message_window/MessageWindow.module.css
+++ b/frontend/src/components/UI/modals/message_window/MessageWindow.module.css
@@ -28,6 +28,7 @@
 
 .messageWindowLabel {
     display: block;
+    text-align: left;
     margin-top: 10px;
     margin-bottom: 0;
     margin-left: 15px;
@@ -35,8 +36,7 @@
 }
 
 .messageWindowText {
-    margin-left: 15px;
-    margin-top: 10px;
-    margin-right: 15px;
+    text-align: left;
+    margin: 5px 15px 15px 15px;
     font-weight: 400;
 }
