--- a/frontend/src/styles/LoginForm.css
+++ b/frontend/src/styles/LoginForm.css
@@ -40,6 +40,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 10px 0 25px;
+    user-select: none;
 }
 
 .login-input {
